# cuprate

binaries/cuprated/src/: config.rs  p2p.rs
binaries/cuprated/src/config/: p2p.rs
binaries/cuprated/src/p2p/: network_address.rs
net/wire/src/: network_address.rs
net/wire/src/network_address/: garlic_addr.rs
p2p/p2p-core/src/: lib.rs  network_zones.rs
p2p/p2p-core/src/network_zones/: i2p.rs
p2p/p2p-transport/: Cargo.toml
p2p/p2p-transport/src/: i2p.rs  lib.rs
